[REFACTOR] PlaceService 예외 매핑 및 응답 처리 코드 정리
- 외부 API 예외 매핑 메서드에서 불필요한 message 파라미터 제거
- WebClientRequestException 분기에서 사용하지 않는 변수 선언 제거
- geocode 응답 첫 문서 조회를 getFirst()로 변경
- reverse-geocode 응답 첫 문서 조회를 getFirst()로 변경
- 전반적인 자잘한 코드 정리